Startup cost calculation corrected and decimals adjusted for CO2 rate, marginalCost and startUp cost calculations.